cppcheck/448912_report.txt
inflate.c:31:10: error: Uninitialized variable: have [uninitvar]
    in = have;
         ^
inflate.c:32:11: error: Uninitialized variable: left [uninitvar]
    out = left;
          ^
inflate.c:10:14: style: Variable 'bits' is not assigned a value. [unassignedVariable]
    unsigned bits;              /* bits in bit buffer */
             ^
inflate.c:19:19: style: Unused variable: hbuf [unusedVariable]
    unsigned char hbuf[4];      /* buffer for gzip header crc calculation */
                  ^
inflate.c:1:0: style: The function 'inflate' is never used. [unusedFunction]
int ZEXPORT inflate(strm, flush)
^
